--- a/literature-projects.html
+++ b/literature-projects.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Литературные проекты, созданные с использованием ИИ-инструментов">
     <title>Литературные проекты | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -966,7 +972,7 @@
                     <li class="has-submenu">
                         <a href="ai-projects.html" class="active" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-uchenikov.html" style="font-weight: 700; color: var(--color-primary);">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
                             <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
@@ -979,7 +985,7 @@
                             <li><a href="yuid.html">ЮИД</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -2201,12 +2207,21 @@ Telegram. Неизвестный аккаунт без аватарки.
                 </ul>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта.<br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-    </footer>
+      
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
+
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>  
 
     <script>
         // Мобильное меню
