--- a/konspekty-urokov.html
+++ b/konspekty-urokov.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Конспекты уроков по модулям ОБЗР для 8-11 классов - систематизированная коллекция разработок в соответствии с ФГОС">
     <title>Конспекты уроков по модулям | Дёмин А.Ю.</title>
+   <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -1141,10 +1147,10 @@ body.modal-open {
                     <li class="has-submenu">
                         <a href="metodika.html" class="active" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="konspekty-urokov" style="font-weight: 700; color: var(--color-primary);">Конспекты уроков по модулям</a></li>
-                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-                            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html" style="font-weight: 700; color: var(--color-primary);">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
 
@@ -1161,12 +1167,12 @@ body.modal-open {
                     <li class="has-submenu">
                         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
                         <ul class="submenu">
-                            <li><a href="yunarmiya">Юнармия</a></li>
-                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica">Зарница 2.0</a></li>
-                            <li><a href="olimpiady-obzr">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie-partnery">Взаимодействие с партнёрами</a></li>
+                            <li><a href="yunarmiya.html">Юнармия</a></li>
+                            <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
+                            <li><a href="zarnica.html">Зарница 2.0</a></li>
+                            <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
@@ -1774,12 +1780,20 @@ body.modal-open {
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.)<br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-    </footer>
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
+
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>
 
     <script>
         // ============================================
