--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -18,7 +18,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Галерея документов и фотографий">
-    <title>Название страницы | Дёмин А.Ю.</title>
+    <title>Достижения учащихся | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -804,18 +810,18 @@ main > .slider-btn,
                         <a href="portfolio.html" class="active">Портфолио</a>
                         <ul class="submenu">
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР</a></li>
-                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+                            <li><a href="dostizheniya-uchenikov.html" style="font-weight: 700; color: var(--color-primary);">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
                         <a href="metodika.html">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков</a></li>
-                            <li><a href="metodika.html#prezentacii-testy">Презентации и тесты</a></li>
-                            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации и тесты</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -824,7 +830,7 @@ main > .slider-btn,
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#ai-poleznye-resursy">Полезные ресурсы по ИИ вобразовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ вобразовании</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -834,7 +840,7 @@ main > .slider-btn,
                             <li><a href="yuid.html">ЮИД</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -1130,12 +1136,21 @@ main > .slider-btn,
                 </ul>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта.<br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-    </footer>
+
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
+
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script> 
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Мобильное меню
@@ -2180,6 +2195,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
